PPL-Sources/PPL-FE/src/test/resources/CoCos/Valid/ReadOnlyGlobalVar.par
ReadOnlyGlobalVar {
var Int test = 0
seq main() : Void {
    var Int I = test
}
}