PPL-Sources/PPL-FE/src/test/resources/CoCos/Invalid/RemoveQualifiedNameExpressionCoCo.par
RemoveQualifiedNameExpressionCoCo {
var Int test = 0
seq main() : Void {
    test = test.test
}
}